SigmaCodebackup3rdSep/objects/Work_Order__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Another_Visit_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Another Visit Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AssignTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Orders_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_City__c</fullName>
        <formula>Account__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Country__c</fullName>
        <formula>Account__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_State__c</fullName>
        <formula>Account__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Street__c</fullName>
        <formula>Account__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Zip_Post_Code__c</fullName>
        <formula>Account__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill Zip/Post Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State_Province__c</fullName>
        <label>Billing State/Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Postal_Code__c</fullName>
        <label>Billing Zip/Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Break_time_In_Minutes__c</fullName>
        <label>Break time (In Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Number_text__c</fullName>
        <label>Case Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Subject_text__c</fullName>
        <label>Work Order Brief</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckIn_DateTime__c</fullName>
        <label>Check-In DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Check_In_Address__c</fullName>
        <label>Check-In Pin Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_In_Location__c</fullName>
        <label>Check-In Location</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Check_Out_Date_Time__c</fullName>
        <label>Check-Out Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Check_Out_Location__c</fullName>
        <label>Check-Out Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Check_Out_Pincode__c</fullName>
        <label>Check-Out Pincode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>FFP_MR_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Availability_Date__c</fullName>
        <label>Preferred Service Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Contact__c</fullName>
        <label>Contact Phone No. at Site</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Amount__c</fullName>
        <formula>TotalAmount__c - Paid_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Field__c</fullName>
        <label>Email Field</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <formula>StartDate__c+60/1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EndDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FFP_MR_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Call_Resolution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Call Resolution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generate_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Invoice_in_Service_Order_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Invoice in Service Order Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRecordOwner__c</fullName>
        <formula>IF( OwnerId = $User.Id,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsRecordOwner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Credit_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Credit_Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Payment_Made__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Payment Made</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local_Contact_Number__c</fullName>
        <label>Local Contact (phone)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Local_Contact__c</fullName>
        <label>Local Contact at Site</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Visit_Date_Time__c</fullName>
        <label>Next Visit Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NonAndroidDevicesCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NonAndroidDevicesCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Paid_Amount__c</fullName>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment</label>
        <referenceTo>Payment</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Warranty_End_date__c</fullName>
        <formula>Sigma_orders__r.Product_Warranty_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Warranty End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_for_another_Visit__c</fullName>
        <label>Reason for another Visit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insufficient Spares Inventory</fullName>
                </value>
                <value>
                    <fullName>More Service Time Needed</fullName>
                </value>
                <value>
                    <fullName>Customer available for limited time</fullName>
                </value>
                <value>
                    <fullName>Additional Service Support Needed</fullName>
                </value>
                <value>
                    <fullName>Issue different from that reported</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Back_Reason_Description__c</fullName>
        <label>Send Back Reason Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Send_Back_Reason__c</fullName>
        <label>Send Back Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Emergency Leave</fullName>
                </value>
                <value>
                    <fullName>No Part stock to Service</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_City__c</fullName>
        <label>Service City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Contract_End_date__c</fullName>
        <formula>Service_Contract__r.Contract_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Contract End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Service_Contract__c.Contact__r.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Service_Contract__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Service_Contract__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Country__c</fullName>
        <label>Service Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Manager_ID__c</fullName>
        <label>Service Manager ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_State_Province__c</fullName>
        <label>Service State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Street__c</fullName>
        <label>Service Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Warrenty_End_date__c</fullName>
        <formula>Sigma_orders__r.Service_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Warrenty End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Zip_Postal_Code__c</fullName>
        <label>Service Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State_Province__c</fullName>
        <label>Shipping State/Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street__c</fullName>
        <label>Shipping Street</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Zip_Postal_Code__c</fullName>
        <label>Shipping Zip/Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sigma_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sigma Order</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Sigma_Order__c.AccountId__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Sigma_Order__c.Orders_Status__c</field>
                <operation>equals</operation>
                <value>Order Confirmed, Delivered</value>
            </filterItems>
            <filterItems>
                <field>Sigma_Order__c.BillingPersonNew__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.FFP_MR_Contact__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Sigma_Order__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sigma_orders__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Line</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product_Order_Price_Book__c.Sigma_Order__c</field>
                <operation>equals</operation>
                <valueField>$Source.Sigma_Order__c</valueField>
            </filterItems>
            <filterItems>
                <field>Product_Order_Price_Book__c.Order_Status__c</field>
                <operation>equals</operation>
                <value>Delivered</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Product_Order_Price_Book__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>StartDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Work Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Invoiced to Customer</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Another Visit Needed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax(%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>San Francisco</fullName>
                </value>
                <value>
                    <fullName>San Mateo</fullName>
                </value>
                <value>
                    <fullName>Trinity</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Value__c</fullName>
        <description>Total Line level cost</description>
        <inlineHelpText>Total Line level cost</inlineHelpText>
        <label>Total Price</label>
        <summarizedField>Work_Oder_Lines__c.Value__c</summarizedField>
        <summaryFilterItems>
            <field>Work_Oder_Lines__c.Used1__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Work_Oder_Lines__c.Quote__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Work_Oder_Lines__c.Warranty__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Work_Oder_Lines__c.Work_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mechanical</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
                <value>
                    <fullName>Structural</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version_Number__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Version Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Order Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Work Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Work_Type__c.Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Work_Type__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Work Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Customer_Availability_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <role>CEO</role>
            <role>COO</role>
            <role>ChannelSalesTeam</role>
            <role>CustomerSupportInternational</role>
            <role>CustomerSupportNorthAmerica</role>
            <role>DirectorChannelSales</role>
            <role>DirectorDirectSales</role>
            <role>EasternSalesTeam</role>
            <role>InstallationRepairServices</role>
            <role>MarketingTeam</role>
            <role>SVPCustomerServiceSupport</role>
            <role>SVPHumanResources</role>
            <role>SVPSalesMarketing</role>
            <role>VPInternationalSales</role>
            <role>VPMarketing</role>
            <role>VPNorthAmericanSales</role>
            <role>Vendor_community_user</role>
            <role>Warehouse_Manager</role>
            <role>Warehouse_User</role>
            <role>WesternSalesTeam</role>
            <role>jyothi_customer_user</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Work_Orders</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>FFP_MR_Contact__c</columns>
        <columns>Work_Type__c</columns>
        <columns>Status__c</columns>
        <columns>AssignTo__c</columns>
        <columns>Service_City__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filters>
        <label>All Work Orders</label>
        <sharedTo>
            <role>CFO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Assigned_Work_Orders</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>FFP_MR_Contact__c</columns>
        <columns>Work_Type__c</columns>
        <columns>Status__c</columns>
        <columns>AssignTo__c</columns>
        <columns>Service_City__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>Work Orders In Progress</label>
    </listViews>
    <listViews>
        <fullName>Assigned_Work_Orders_For_Today</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>FFP_MR_Contact__c</columns>
        <columns>Customer_Availability_Date__c</columns>
        <columns>Work_Type__c</columns>
        <columns>Status__c</columns>
        <columns>AssignTo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Customer_Availability_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filters>
        <label>Work Orders Assigned For Today</label>
    </listViews>
    <listViews>
        <fullName>Completed_Work_Orders</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>FFP_MR_Contact__c</columns>
        <columns>Work_Type__c</columns>
        <columns>Shipping_City__c</columns>
        <columns>AssignTo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Work Orders Completed</label>
    </listViews>
    <listViews>
        <fullName>NEW</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filters>
        <label>NEW</label>
    </listViews>
    <listViews>
        <fullName>Rejected_Work_Orders</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>FFP_MR_Contact__c</columns>
        <columns>Work_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Customer_Availability_Date__c</columns>
        <columns>Service_City__c</columns>
        <columns>AssignTo__c</columns>
        <columns>Local_Contact_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>Rejected Work Orders</label>
    </listViews>
    <listViews>
        <fullName>Work_Orders_assigned_to_me</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>FFP_MR_Contact__c</columns>
        <columns>Customer_Availability_Date__c</columns>
        <columns>Work_Type__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filters>
        <label>Work Orders Assigned to me</label>
    </listViews>
    <listViews>
        <fullName>Work_orders_Accepted</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>FFP_MR_Contact__c</columns>
        <columns>Work_Type__c</columns>
        <columns>Status__c</columns>
        <columns>AssignTo__c</columns>
        <columns>Service_City__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </filters>
        <label>Work Orders Accepted</label>
    </listViews>
    <nameField>
        <displayFormat>WO-{0000}</displayFormat>
        <label>Work Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Orders</pluralLabel>
    <recordTypes>
        <fullName>Accepted_WO</fullName>
        <active>true</active>
        <label>Accepted</label>
    </recordTypes>
    <recordTypes>
        <fullName>Another_Visit_Needed</fullName>
        <active>true</active>
        <label>Another Visit Needed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Assigned_WO</fullName>
        <active>true</active>
        <label>Assigned</label>
    </recordTypes>
    <recordTypes>
        <fullName>CompletedForAndroid</fullName>
        <active>true</active>
        <description>Record type to displayed only for android devices</description>
        <label>CompletedForAndroid</label>
    </recordTypes>
    <recordTypes>
        <fullName>Completed_WO</fullName>
        <active>true</active>
        <label>Completed</label>
    </recordTypes>
    <recordTypes>
        <fullName>In_Progress</fullName>
        <active>true</active>
        <label>In Progress</label>
    </recordTypes>
    <recordTypes>
        <fullName>Invoiced_to_Customer</fullName>
        <active>true</active>
        <label>Invoiced to Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>New</fullName>
        <active>true</active>
        <label>New</label>
    </recordTypes>
    <recordTypes>
        <fullName>Proceed</fullName>
        <active>true</active>
        <label>Proceed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rejected</fullName>
        <active>true</active>
        <label>Rejected</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Preffered_service_time</fullName>
        <active>true</active>
        <description>Preferred Service Date/Time should be greater than or equal to current time</description>
        <errorConditionFormula>Customer_Availability_Date__c&lt; NOW()</errorConditionFormula>
        <errorDisplayField>Customer_Availability_Date__c</errorDisplayField>
        <errorMessage>Preferred Service Date/Time should be greater than or equal to current time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WO_Closure</fullName>
        <active>false</active>
        <description>Lock the WO when completed</description>
        <errorConditionFormula>ISPICKVAL(PRIORVALUE( Status__c ),&quot;Completed&quot;)</errorConditionFormula>
        <errorMessage>Completed Work order cannot be modified.</errorMessage>
    </validationRules>
</CustomObject>